src/app/hero-banner/hero-banner.scss
@use '../styles/fonts.scss';
@use '../styles/variables.scss' as vars;

:host {
  --size: clamp(10rem, 1rem + 40vmin, 30rem);
  --gap: calc(var(--size) / 14);
  --duration: 60s;
  --scroll-start: 0;
  --scroll-end: calc(-100% - var(--gap));
  overflow: hidden;
  display: block;
}

.banner-wrapper {
  position: absolute;
  overflow: hidden;
  inset: 0;
  pointer-events: none;
  z-index: 5;
}

.banner {
  position: absolute;
  display: flex;
  top: 818px;
  left: 50%;
  width: 140%;
  height: 62px;
  transform: translate(-50%, -50%) rotate(-3deg);
  overflow: hidden;
  background: #FFFFFF1F;
  -webkit-backdrop-filter: blur(5px);
  backdrop-filter: blur(5px)
}

@media (min-width: 1920px) {
  .banner {
    max-width: 1920px;
    margin: 0 auto;
    mask-image: linear-gradient(to right, transparent 0%, black 20%, black 80%, transparent 100%);
    -webkit-mask-image: linear-gradient(to right, transparent 0%, black 20%, black 80%, transparent 100%);
  }
}

.marquee {
  display: flex;
  overflow: hidden;
  user-select: none;
  width: 100%;
  gap: var(--gap);
  mask-image: linear-gradient(
    var(--mask-direction, to right),
    hsl(0 0% 0% / 0),
    hsl(0 0% 0% / 1) 20%,
    hsl(0 0% 0% / 1) 80%,
    hsl(0 0% 0% / 0)
  );
}

.marquee__group {
  flex-shrink: 0;
  display: flex;
  align-items: center;
  justify-content: space-around;
  gap: var(--gap);
  min-width: 100%;
  animation: scroll-x var(--duration) linear infinite;
  color: vars.$main-color;
  font-family: 'karla-regular';
  font-size: 32px;
  font-weight: 400;
}

@media (prefers-reduced-motion: reduce) {
  .marquee__group {
    animation-play-state: paused;
  }
}

.marquee--vertical {
  --mask-direction: to bottom;
}

.marquee--vertical,
.marquee--vertical .marquee__group {
  flex-direction: column;
}

.marquee--vertical .marquee__group {
  animation-name: scroll-y;
}

.marquee--reverse .marquee__group {
  animation-direction: reverse;
  animation-delay: -3s;
}

@keyframes scroll-x {
  from {
    transform: translateX(var(--scroll-start));
  }
  to {
    transform: translateX(var(--scroll-end));
  }
}

@keyframes scroll-y {
  from {
    transform: translateY(var(--scroll-start));
  }
  to {
    transform: translateY(var(--scroll-end));
  }
}

.wrapper {
  display: flex;
  flex-direction: column;
  gap: var(--gap);
  margin: auto;
  max-width: 100vw;
  width: 100%;
}

